src/test/ui/borrowck/borrowck-borrow-immut-deref-of-box-as-mut.stderr
error[E0596]: cannot borrow immutable `Box` content `*a` as mutable
  --> $DIR/borrowck-borrow-immut-deref-of-box-as-mut.rs:12:5
   |
LL |     let a: Box<_> = box A;
   |         - help: make this binding mutable: `mut a`
LL |     a.foo();
   |     ^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
